# mosques-accounting-app

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
category/: serializers.py  views.py
core/: admin.py  models.py  pagination.py  serializers.py
core/migrations/: 0001_initial.py  0004_alter_record_unit.py  0009_remove_record_unit.py  0012_alter_place_created_at_alter_record_created_at.py
core/permissions/: IsNotMosqueAdmin.py
mosques_app/: asgi.py  manage.py  settings.py
mosques_app/category/: serializers.py  urls.py  views.py
mosques_app/core/: admin.py  models.py  serializers.py
mosques_app/core/migrations/: 0001_initial.py  0002_user_role_alter_activitylog_user.py  0003_alter_record_category.py  0005_category_percentage_alter_user_role.py  0006_alter_place_place_type.py  0007_alter_category_percentage.py  0008_category_core_catego_name_6ef604_idx.py  0010_alter_category_created_at_alter_place_created_at_and_more.py  0011_remove_category_created_at_and_more.py
mosques_app/mosques_app/: settings.py  urls.py  wsgi.py
mosques_app/place/: serializers.py  urls.py  views.py
mosques_app/record/: serializers.py  urls.py  views.py
mosques_app/unit/: serializers.py  urls.py
mosques_app/user/: serializers.py  urls.py  views.py
mosques_app/user/dto/: me.py
place/: excel.py  serializers.py  urls.py  views.py
record/: serializers.py  urls.py  views.py
unit/: views.py
user/: serializers.py  urls.py  views.py
